@startuml
class BoletoWinner << (F,#FF7700) Facade >> {
    + {static} isValid(barcodeOrWritableLine : string) : boolean
    + {static} isValidBarcode(barcode : string) : boolean
    + {static} isValidWritableLine(writableLine : string) : boolean
    + {static} isValidBoleto(barcodeOrWritableLine : string) : boolean
    + {static} isValidConvenio(barcodeOrWritableLine : string) : boolean
    + {static} makeBill(barcodeOrWritableLine: string) : Bill
    + {static} toWritableLine(barcode: string) : string
    + {static} toBarcode(writableLine: string) : string
}

class BillFactory << Singleton >> {
    # bills : array
    + {static} getInstance() : BillFactory
    + createBillInstance(type : string) : Bill
    + createFromBarcodeOrWritableLine(barcodeOrWritableLine : string) : Bill
    + createFromWritableLine(writableLine : string) : Bill
    + createFromBarcode(barcode : string) : Bill
}

interface Converter {
    + toBarcode(bill : Bill) : string
    + toWritableLine(bill : Bill) : string
}

interface Validator {
    + checkWritableLine(bill : Bill) : boolean
    + checkBarcode(bill : Bill) : boolean
}

abstract Bill {
    # writableLine : string
    # barcode : string
    - converter : Converter
    - validator : Validator
    __
    + setBarcode(code : string) : Bill
    + setWritableLine(line : string) : Bill
    ..
    + getBarcode(): string
    + getWritableLine() : string
    ..
    + {abstract} isWritableLineValid() : bool
    + {abstract} isBarcodeValid() : bool
    # {abstract} barcodeToWritableLine() : void
    # {abstract} writableLineToBarcode() : void
}

BoletoWinner --> BillFactory

BillFactory --> Bill

Bill <|-- Boleto
Bill <|-- Convenio

Bill -> Converter
Bill -> Validator

Converter <|-- BoletoConverter
Converter <|-- ConvenioConverter

Validator <|-- BoletoValidator
Validator <|-- ConvenioValidator

@enduml
